- Added command line option support.  Try "marc --help".

- Improved logging by leveraging the spdlog library as the underling
  logging framework.  This allows for faster logging, and log level
  differentiated output (e.g. text color on terminals that support
  ANSI colors), as well.

- Corrected progress output for the Orthographic map projection so
  that completion percentage is printed up to 100%.

- MERCATOR map entries in MaRC input files may now use options common
  to all MaRC map projections.

- Fixed a mosaic averaging regression that caused weighted and
  unweighted averaging to be disabled if either was selected.

- Added support for generation of code coverage results for g++
  builds.  Try the following to generate the results:
        ./configure --enable-code-coverage
        make check-code-coverage

- Replaced all uses of the MaRC-specific "bodycentric" and
  "bodygraphic" latitude terminology with the NASA NAIF recommended
  "planetocentric" and "planetographic", respectively.

31 January 2018 - MaRC 0.9.10

- Reduced footprint of the MaRC program (`marc') and library
  (`libMaRC').  For example, including both the MaRC library and
  program, the static footprint was reduced by 28% for a 64-bit Linux
  build with g++ 7.2 when comparing total sizes returned by the `size'
  command.

- Data scaling values, i.e. BSCALE and BZERO, as well as the physical
  data unit (BUNIT) are now automatically written to the map FITS
  header when possible.  This allows FITS reading and viewing software
  to automatically provide the actual physical value to the user,
  instead of forcing the user to manually scale the map data.
  Currently this only applies to single plane maps containing one of
  the MaRC virtual images (MU, MU0, PHASE, LATITUDE or LONGITUDE).

  Maps with multiple planes currently write the scaling values as
  free-form text across several HISTORY cards in the FITS header
  instead of standalone BSCALE, BZERO and BUNIT cards.  In this case,