@@ -12,4 +12,6 @@ if test -z "${top_srcdir+set}"; then
   top_srcdir=..
 fi
 
-$top_builddir/src/marc $top_srcdir/tests/test_map.marc
+
+XDG_CONFIG_HOME=$top_srcdir/tests/config \
+    $top_builddir/src/marc $top_srcdir/tests/test_map.marc
